src/App.css
html,
body,
#root {
  font-size: 14px;
  background-color: #f0f0f0;
}




.container {
  min-height: 100vh;
  width: 100%;
  background-color: #f0f0f0;
  outline: 1px solid #f0f0f0;
}

.header {
  display: flex;
  justify-content: center;
  align-items: center;
  color: rgb(45, 45, 45);
  font-size: clamp(24px, 5vw, 40px);
  text-align: center;
  line-height: 1.2;
  font-family: "Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
  margin-top: 2rem;
  padding: 1rem;

}

.input {
  display: flex;
  justify-content: center;
  align-items: stretch;
  gap: 0;

}

input {
  height: 40px;
  padding: 0 10px;
  font-size: 16px;
  border-radius: 8px;
  border: 1px solid #ffb6d2;
  width: 270px;
  background-color: rgba(255, 182, 210, 0.285);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  color: #000000;
}

button {
  height: 40px;
  padding: 0 10px;
  font-size: 16px;
  border-radius: 8px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  border: 1px solid #ffb6d2;
  cursor: pointer
}

button:hover {
  background-color: rgba(255, 182, 210, 0.678);
}


.list {
  max-width: 500px;
  margin: 50px auto;
  padding: 1.5rem;
  background: #ffffff;
  border-radius: 16px;
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);

}


.list h3 {
  text-align: center;
  margin-top: 0;
  margin-bottom: 20px;
  color: #222;
  font-weight: 600;
  font-size: 20px;
}


.habit-item {
  display: flex;
  align-items: center;
  gap: 10px;
  padding: 15px 15px;
  margin-bottom: 10px;
  border-radius: 12px;
  background: #f7f7f7;
  transition: 0.2s ease;
}


.habit-item:hover {
  background: #f1f1f1;
  transform: translateY(-1px);
}


.check {
  width: 20px;
  text-align: center;
}


.text {
  flex: 1;
  color: #000000;
  font-size: 16px;
}


.text.done {
  text-decoration: line-through;
  color: #999;
}


.btn {
  border: none;
  padding: 10px 15px;
  border-radius: 10px;
  font-size: 13px;
  cursor: pointer;
  transition: 0.2s ease;
}


.btn.complete {
  background: #f8c8dc;
  color: #323232;
}

.btn.complete:hover {
  background: #f4a9c6;
}


.btn.delete {
  background: #e0e0e0;
  color: #323232;
}

.btn.delete:hover {
  background: #bcbcbc;
}

.summary {
  max-width: 500px;
  margin: 50px auto;
  padding: 1.5rem;
  background: #ffffff;
  border-radius: 16px;
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);

}

.summary h3 {
  text-align: center;
  margin-top: 0;
  margin-bottom: 20px;
  color: #222;
  font-weight: 600;
  font-size: 20px;
}

